# kafka-stubs

./: README.md  pyproject.toml  ruff.toml  tox.ini
.github/workflows/: check.yml
src/confluent_kafka-stubs/: __init__.pyi  _config.pyi  cimpl.pyi  deserializing_consumer.pyi  error.pyi  serializing_producer.pyi
src/confluent_kafka-stubs/_model/: __init__.pyi
src/confluent_kafka-stubs/admin/: __init__.pyi  _acl.pyi  _cluster.pyi  _config.pyi  _group.pyi  _listoffsets.pyi  _metadata.pyi  _records.pyi  _resource.pyi  _scram.pyi  _topic.pyi
src/confluent_kafka-stubs/avro/: __init__.pyi  cached_schema_registry_client.pyi  error.pyi  load.pyi
src/confluent_kafka-stubs/avro/serializer/: __init__.pyi  message_serializer.pyi
src/confluent_kafka-stubs/schema_registry/: __init__.pyi  error.pyi  schema_registry_client.pyi
src/confluent_kafka-stubs/serialization/: __init__.pyi
